--- a/index.html
+++ b/index.html
@@ -123,10 +123,11 @@
         </p>
         
         <div class="closing">
-            Once Again Happiest Birthday Pilyaa! 💕🥳<br>
-            I love you so much... 💋💋<br>
-            Missing You a lot.. 🥺
+            Once Again Happiest Birthday to you Pilyaa! 💕🥳<br>
+            I love you so much harshu baby... 💋💋<br>
+            Missing You a lot darling.. 🥺
         </div>
     </div>
 </body>
 </html>
+
